# RoutingConfigApi

./: .gitignore  CMakeLists.txt  README.md  run.sh  sample_request.sh
Config/: BirdConf.json  BirdConfSchema.json
Config/Schemas/: bgp-action.json  bgp-as-path.json  bgp-community.json  bgp-main-config.json  common.json  route-prefix.json  static-route-config.json
Config/Test/: bgp-config-communities-schema.json  bgp-config-communities-test.json  bgp-config-diff-test.json  bgp-config-diff2-test.json  bgp-config-test.json
Source/: BirdConfigConverter.hpp  BirdConfigExecutor.hpp  Common.hpp  ConnectionManagement.cpp  ConnectionManagement.hpp  FileStorage.hpp  HttpCommon.hpp  IConfigConverting.hpp  IConfigExecuting.hpp  IConfigManagement.hpp  IDataStorage.hpp  ISchemaManagement.hpp  JsonCommon.hpp  JsonConfigManager.hpp  JsonFileStorage.hpp  JsonSchemaManager.hpp  JsonSchemaProperties.hpp  Main.cpp  Modules.hpp  SessionManagement.cpp  SessionManagement.hpp
Source/Demo/: Demo.cpp  bird.conf
Source/Lib/: Logging.hpp  ModuleRegistry.hpp  MultiinheritShared.hpp  StdLib.hpp  TimerService.hpp  Utils.hpp
Source/Lib/Composite/: Composite.hpp  INode.hpp  Node.hpp  README.md  Test.hpp  Visitor.hpp
